--- a/README
+++ b/README
@@ -2,6 +2,6 @@ BuildSys to build a linux system automatically
 
 Execute following to enter sdk environment:
 	sudo BuildSys/entdevenv
-Then execute following to build the world:
+Then execute following to build the world for the first time:
 	/tools/bin/bash buildsys all
 Use your favorit editor to edit content in BuildSys directory outside sdk environment.
