--- a/README
+++ b/README
@@ -2,7 +2,7 @@ BuildSys to build a linux system automatically
 
 Execute following to enter sdk environment:
 	cd BuildSys
-	sudo ./entdevenv
+	./entdevenv
 Then execute following to build the world for the first time:
-	/tools/bin/bash buildsys all
+	./buildsys all
 Use your favorit editor to edit content in BuildSys directory outside sdk environment.
